--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,10 @@
 
 .container {
   padding-top: 158px;
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: Inter, sans-serif;
   max-width: 852px;
   margin: 0 auto;
+  padding-bottom: 60px;
 }
 
 .page-title {
@@ -116,4 +117,156 @@
   height: 100%;
   object-fit: contain;
   object-position: center;
+}
+
+.youknow {
+  display: flex;
+  margin-bottom: 60px;
+}
+.youknow__left {
+  flex: 0 1 40%;
+}
+.youknow__imgbox {
+  width: 50%;
+  margin: 0 auto;
+}
+.youknow__imgbox img {
+  width: 100%;
+  height: 100%;
+  object-fit: cotaint;
+  object-position: center;
+}
+
+.youknow__right {
+}
+.youknow__title {
+  font-size: 24px;
+  color: #737373;
+  margin-bottom: 16px;
+}
+.youknow__item {
+  padding-left: 40px;
+  position: relative;
+  margin-bottom: 16px;
+  color: #737373;
+}
+.youknow__item::before {
+  content: '';
+  position: absolute;
+  display: block;
+  height: 2px;
+  width: 20px;
+  background-color: #737373;
+  top: 30%;
+  left: 14px;
+  transform: translateY(-50%);
+}
+
+.howork {
+  display: flex;
+  margin-bottom: 88px;
+}
+.howork__left {
+  flex: 0 1 65%;
+}
+.howork__right {
+  flex: 0 1 35%;
+}
+.howork__imgbox {
+  height: 145px;
+}
+.howork__imgbox img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+}
+.howork__title {
+  font-size: 24px;
+  color: #737373;
+  margin-bottom: 16px;
+}
+.howork__list {
+  color: #737373;
+}
+.howork__item {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 16px;
+}
+
+.form {
+  max-width: 658px;
+  margin: 0 auto;
+  border-radius: 16px;
+  box-shadow: 2px 2px 10px #00000049;
+  padding: 40px 60px;
+}
+
+.form__title {
+  font-size: 24px;
+  text-align: center;
+  color: #737373;
+  margin-bottom: 2rem;
+}
+
+.form__box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.form__box_green {
+  color: #44BABD;
+}
+.checkbox {
+  width: 24px;
+  height: 24px;
+  border-radius: 4px;
+  border-color: #44BABD;
+}
+.privacy-check {
+  padding-left: 14px;
+}
+.label {
+  flex: 0 0 160px;
+  color: #737373;
+}
+.input {
+  flex: 1 1 auto;
+  border: none;
+  border-bottom: 1px solid #737373;
+  padding: 8px;
+}
+.input:focus {
+  /* border: none; */
+  outline: none;
+  color: #44BABD;
+  border-color: #44BABD;
+}
+.input:placeholder:focus {
+  color: #44BABD;
+}
+.form__price {
+  color: #ff0000;
+  font-size: 18px;
+}
+
+.heart-box-btn {
+  background-color: #44babd;
+  border-radius: 999px;
+  border: none;
+  color: #fff;
+  padding: 10px 20px;
+  margin-left: 40px;
+  transition: 0.3s;
+}
+.heart-box-btn:hover {
+  background-color: #308688;
+  cursor: pointer;
+}
+
+.form__box .heart-box-btn {
+  font-size: 18px;
+  margin-left: 0;
 }
