--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   font-family: Inter, sans-serif;
   max-width: 852px;
   margin: 0 auto;
-  padding-bottom: 60px;
+  padding-bottom: 160px;
 }
 
 .page-title {
@@ -203,6 +203,26 @@
   box-shadow: 2px 2px 10px #00000049;
   padding: 40px 60px;
 }
+.message {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: cetner;
+  min-height: 309px;
+  
+  max-width: 658px;
+  margin: 0 auto;
+  border-radius: 16px;
+  box-shadow: 2px 2px 10px #00000049;
+  padding: 40px 60px;
+}
+.message__content {
+  font-size: 16px;
+  color: #308688;
+  font-weight: 500;
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
 
 .form__title {
   font-size: 24px;
@@ -269,4 +289,8 @@
 .form__box .heart-box-btn {
   font-size: 18px;
   margin-left: 0;
+}
+
+.hidden {
+  display: none;
 }
